<resources>
    <string name="app_name">CP3406 Assignment 1</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="about_buttons_press">About</string>
    <string name="input_here">Input Here</string>

    <string name="celsius_and_fahrenheit_conversion">Celsius and Fahrenheit Conversion:</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>

    <string name="kilometres_and_miles_conversion">Kilometres and Miles Conversion:</string>
    <string name="kilometres_to_miles">Kilometres to Miles</string>
    <string name="miles_to_kilometres">Miles to Kilometres</string>

    <string name="kilograms_and_pounds_conversion">Kilograms and Pounds Conversion:</string>
    <string name="kilograms_to_pounds">Kilograms to Pounds</string>
    <string name="pounds_to_kilograms">Pounds to Kilograms</string>

    <string name="about">About</string>
    <string name="app_uptime">App Uptime:</string>

    <string name="formulas">Formulas:</string>

    <string name="ctf_formula_text">Celsius to Fahrenheit: </string>
    <string name="ctf_formula">(Input * 9/5) + 32</string>

    <string name="ftc_formula_text">Fahrenheit to Celsius: </string>
    <string name="ftc_formula">(Input - 32) * 5/9</string>

    <string name="ktm_formula_text">Kilometres to Miles: </string>
    <string name="ktm_formula">Input / 1.609</string>

    <string name="mtk_formula_text">Miles to Kilometres: </string>
    <string name="mtk_formula">Input * 1.609</string>

    <string name="ktp_formula_text">Kilograms to Pounds: </string>
    <string name="ktp_formula">Input * 2.205</string>

    <string name="ptk_formula_text">Pounds to Kilograms: </string>
    <string name="ptk_formula">Input / 2.205</string>
</resources>
